// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders base 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="php.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              PHP7
               
              <small />
            </span>
          </div>
          <div>
            Web technology
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card component renders optional subTitle 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="php.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              PHP7
               
              <small>
                Some web technology
              </small>
            </span>
          </div>
          <div>
            Web technology
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card component renders optional technologies 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="work_project.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="svg-wrapper"
          >
            <div
              class="svg-item"
            >
              <div
                currentitem="false"
                data-event="click mousestart mouseover"
                data-event-off="mouseout"
                data-for="technologyTip-PHP7"
                data-tip="true"
              >
                <div
                  data-src="img/svg/PHP7.svg"
                  src=""
                />
              </div>
              <div
                class="__react_component_tooltip t68269329-503a-4cff-babc-fd09768bba0d place-top type-dark"
                data-id="tooltip"
                id="technologyTip-PHP7"
              >
                <style
                  aria-hidden="true"
                >
                  
  	.t68269329-503a-4cff-babc-fd09768bba0d {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
	    border-radius: undefinedpx;
	    padding: 8px 21px;
  	}

  	.t68269329-503a-4cff-babc-fd09768bba0d.place-top {
        margin-top: -10px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-top::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-top::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(135deg);
    }

    .t68269329-503a-4cff-babc-fd09768bba0d.place-bottom {
        margin-top: 10px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-bottom::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-bottom::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(45deg);
    }

    .t68269329-503a-4cff-babc-fd09768bba0d.place-left {
        margin-left: -10px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-left::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-left::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        right: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(45deg);
    }

    .t68269329-503a-4cff-babc-fd09768bba0d.place-right {
        margin-left: 10px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-right::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t68269329-503a-4cff-babc-fd09768bba0d.place-right::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        left: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(-135deg);
    }
  
                </style>
                PHP7
              </div>
            </div>
            <div
              class="svg-item"
            >
              <div
                currentitem="false"
                data-event="click mousestart mouseover"
                data-event-off="mouseout"
                data-for="technologyTip-React"
                data-tip="true"
              >
                <div
                  data-src="img/svg/React.svg"
                  src=""
                />
              </div>
              <div
                class="__react_component_tooltip t4ff66bc0-c4f0-47c1-827e-166d22ff543e place-top type-dark"
                data-id="tooltip"
                id="technologyTip-React"
              >
                <style
                  aria-hidden="true"
                >
                  
  	.t4ff66bc0-c4f0-47c1-827e-166d22ff543e {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
	    border-radius: undefinedpx;
	    padding: 8px 21px;
  	}

  	.t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-top {
        margin-top: -10px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-top::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-top::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(135deg);
    }

    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-bottom {
        margin-top: 10px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-bottom::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-bottom::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(45deg);
    }

    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-left {
        margin-left: -10px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-left::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-left::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        right: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(45deg);
    }

    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-right {
        margin-left: 10px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-right::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t4ff66bc0-c4f0-47c1-827e-166d22ff543e.place-right::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        left: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(-135deg);
    }
  
                </style>
                React
              </div>
            </div>
          </div>
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              Work Project
               
              <small />
            </span>
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;
